tests/bad/func_invalid_param.oc
/// fail: Could not find type with this name

def foo(x: Foo) {  }